--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -27,4 +27,13 @@ html {
   font-size: 10rem;
   flex-flow: column;
 }
- position: fixed;
+ .topbar-fixed {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%
+}
+
+.body {
+    padding-top: 50px; /* height of fixed bar */
+}
